# tafl

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  conanfile.txt  conanprofile-macos.txt
clients/auto-player/: CMakeLists.txt  main.cc
doc/: design.pu
include/: BoardHashTable.hpp  Color.hpp  IBoard.hpp  IMoveTrait.hpp  IPiece.hpp  Move.hpp  Piece.hpp  Pos.hpp
old/clients/auto-player/: main.cc
old/src/include/: iai.hh  utils.hh
old/tests/unit-tests/: CMakeLists.txt  board-fixture.hh  test.hh  tests-board.cc
old/travis/: Makefile
src/: Board.cpp  Board.hpp  MoveTrait.cpp  Piece.cpp  a  ai.cc  board.cc  utils.cc
src/auto-player/: CMakeLists.txt  main.cpp
src/include/: iai.hh  iboard.hh  utils.hh
test/unit-test/: BoardHelper.hpp  CMakeLists.txt  main.cpp  test_Board.cpp  test_BoardHashTable.cpp  test_MoveCalculation.cpp  test_MoveTrait.cpp  test_Piece.cpp  test_Pos.cpp  tests.hpp
test/unit-test/mocks/: MockBoard.hpp
tests/performance-tests/: CMakeLists.txt  main.cc
tests/unit-tests/: CMakeLists.txt  tests-ai.cc  tests-board.cc
travis/: Makefile
